@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>health.com</groupId>
   <artifactId>fitness</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+  <!-- Dependency Management -->
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -16,6 +18,7 @@
     </dependencies>
   </dependencyManagement>
 
+  <!-- Dependencies -->
   <dependencies>
     <dependency>
       <groupId>io.cucumber</groupId>
@@ -32,8 +35,10 @@
     </dependency>
   </dependencies>
 
+  <!-- Build Configuration -->
   <build>
     <plugins>
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -44,6 +49,7 @@
         </configuration>
       </plugin>
 
+      <!-- Jacoco Maven Plugin -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -65,22 +71,25 @@
         </executions>
       </plugin>
 
+      <!-- Maven Surefire Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.1.0</version>
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
-          <argLine>-javaagent:${project.build.directory}/jacoco.exec</argLine>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m -javaagent:${project.build.directory}/jacoco.exec</argLine>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
+  <!-- Properties -->
   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <sonar.organization>hamodeaboshi</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.projectKey>hamodeaboshi_test</sonar.projectKey> 
     <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <sonar.coverage.exclusions>**/*Test.java</sonar.coverage.exclusions>
   </properties>
